--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/resources/application.properties
 local.properties
 .gradle/
 gradle/
@@ -8,3 +7,4 @@ gradlew.bat
 gedit
 out/
 build/
+src/main/resources/application.properties
