--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile ('org.springframework.boot:spring-boot-starter-data-jpa')
     compile ("org.hibernate:hibernate-core:5.4.1.Final")
     compile 'mysql:mysql-connector-java:8.0.11'
+    compile 'org.glassfish.jersey.core:jersey-client:2.26-b03'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
