--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'mysql:mysql-connector-java:8.0.11'
     compile 'org.glassfish.jersey.core:jersey-client:2.26-b03'
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03'
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile "com.jwebmp.jpms.jackson.core:jackson-databind:0.67.0.3"
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
