Changed CharacterEndpoint to StatsEndpoint. Added Google loggin. Added JWT.

--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,28 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile ('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile ("org.springframework.boot:spring-boot-starter-web")
+    compile ("org.springframework.boot:spring-boot-starter-data-jpa")
     compile ("org.hibernate:hibernate-core:5.4.1.Final")
-    compile 'mysql:mysql-connector-java:8.0.11'
-    compile 'org.glassfish.jersey.core:jersey-client:2.26-b03'
-    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03'
-    compile "com.jwebmp.jpms.jackson.core:jackson-databind:0.67.0.3"
+    compile ("mysql:mysql-connector-java:8.0.11")
+    compile ("org.glassfish.jersey.core:jersey-client:2.26-b03")
+    compile ("org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03")
+    compile ("com.jwebmp.jpms.jackson.core:jackson-databind:0.67.0.3")
+    compile ("org.springframework.security:spring-security-rsa:1.0.8.RELEASE")
+    compile ("com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1")
+    compile ("org.springframework:spring-webmvc:5.1.6.RELEASE")
+    compile ("org.springframework:spring-core:5.1.6.RELEASE")
+    //compile ("org.springframework.data:spring-data-redis:2.1.6.RELEASE")
+    //compile ("org.springframework.data:spring-data-elasticsearch:3.1.6.RELEASE")
+
+    //Logging Dependencies
+    compile("com.google.flogger:flogger:0.4")
+    compile("com.google.flogger:flogger-system-backend:0.4")
+
+    //Spring Cloud Dependencies
+    //compile ("org.springframework.cloud:spring-cloud-core:1.2.8.RELEASE")
+    //compile ("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1")
+    //compile ("org.springframework.cloud:spring-cloud-starter-config:2.1.2.RELEASE")
+
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
