--- a/build.gradle
+++ b/build.gradle
@@ -8,15 +8,9 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-
-bootJar {
-    baseName = 'gs-rest-service'
-    version =  '0.1.0'
-}
 
 repositories {
     mavenCentral()
@@ -26,28 +20,30 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile ("org.springframework.boot:spring-boot-starter-web")
-    compile ("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile ("org.hibernate:hibernate-core:5.4.1.Final")
-    compile ("mysql:mysql-connector-java:8.0.11")
-    compile ("org.glassfish.jersey.core:jersey-client:2.26-b03")
-    compile ("org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03")
-    compile ("com.jwebmp.jpms.jackson.core:jackson-databind:0.67.0.3")
-    compile ("org.springframework.security:spring-security-rsa:1.0.8.RELEASE")
-    compile ("com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1")
-    compile ("org.springframework:spring-webmvc:5.1.6.RELEASE")
-    compile ("org.springframework:spring-core:5.1.6.RELEASE")
-    //compile ("org.springframework.data:spring-data-redis:2.1.6.RELEASE")
-    //compile ("org.springframework.data:spring-data-elasticsearch:3.1.6.RELEASE")
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.hibernate:hibernate-core:5.4.1.Final'
+    implementation 'mysql:mysql-connector-java:8.0.11'
+    implementation 'org.glassfish.jersey.core:jersey-client:2.26-b03'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.26-b03'
+    implementation 'com.jwebmp.jpms.jackson.core:jackson-databind:0.67.0.3'
+    implementation 'org.springframework.security:spring-security-rsa:1.0.8.RELEASE'
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.1'
+    implementation 'org.springframework:spring-webmvc:5.1.6.RELEASE'
+    implementation 'org.springframework:spring-core:5.1.6.RELEASE'
+    implementation 'org.assertj:assertj-core:3.18.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    //implementation 'org.springframework.data:spring-data-redis:2.1.6.RELEASE'
+    //implementation 'org.springframework.data:spring-data-elasticsearch:3.1.6.RELEASE'
 
     //Logging Dependencies
-    compile("com.google.flogger:flogger:0.4")
-    compile("com.google.flogger:flogger-system-backend:0.4")
+    implementation 'com.google.flogger:flogger:0.4'
+    implementation 'com.google.flogger:flogger-system-backend:0.4'
 
     //Spring Cloud Dependencies
-    //compile ("org.springframework.cloud:spring-cloud-core:1.2.8.RELEASE")
-    //compile ("org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1")
-    //compile ("org.springframework.cloud:spring-cloud-starter-config:2.1.2.RELEASE")
+    //implementation 'org.springframework.cloud:spring-cloud-core:1.2.8.RELEASE'
+    //implementation 'org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1'
+    //implmentation 'org.springframework.cloud:spring-cloud-starter-config:2.1.2.RELEASE'
 
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
